# lcsr_barrett

./: CHANGELOG.rst  CMakeLists.txt  README.md  idle.launch  idle.ops  package.xml  setup.py  wam7.launch  wam7.ops  wam7_hand.launch  wam7_hand.ops
config/: libbarrett.conf  wam_40.yaml  wam_60.yaml
hw/: conman.ops  orocos_component_params.launch  singularity_rescuer.launch  wam4.launch  wam4.ops  wam7.launch  wam7.ops  wam7.urdf.xacro  wam7_hand.launch
launch/: singularity_rescuer.launch  wam7_planning.launch
launch/hw/: orocos_component_params.launch  wam4.launch  wam7.launch  wam7.urdf.xacro
launch/sim/: orocos_component_params.launch  wam.world  wam7_sim.launch  wam7_sim.urdf.xacro
lua/: lcsr_barrett.lua  load_barrett.lua  load_controllers.lua  wam_hw.lua  wam_sim.lua
models/: aruco_ee.urdf.xacro  bumblebee_ee.urdf.xacro  bumblebee_stereo.urdf.xacro  manipulation_platform.material  manipulation_platform.sdf  manipulation_platform.sdf.xacro  manipulation_platform.urdf.xacro  stage.urdf.xacro  teleop_finger_marker.blend  teleop_finger_marker.dae  teleop_target.blend  teleop_target.blend1  teleop_target.dae  teleop_target.stl
models/meshes/: bench_lattice.blend  bench_lattice.dae  bench_lattice.stl  bench_lattice_fine.stl  manipulation_platform.blend  manipulation_platform.dae  manipulation_platform.stl  platform.blend  platform.blend1  platform.dae  platform.stl
ops/: barrett_hw_manager.ops  barrett_sim_manager.ops  calibration_controllers.ops  comp_manual.ops  controllers.ops  hand.ops  ik.ops  jtns.ops  wam4.ops  wam7.ops
scripts/: attached_object_visualizer.py  hydra_teleop.py  marker_teleop.py
sim/: bhand_sim.ops  orocos_component_params.launch  singularity_rescuer.launch  singularity_rescuer_sim.launch  wam.rviz  wam.world  wam7.ops  wam7.urdf.xacro  wam7_planning.launch  wam7_sim.launch  wam7_sim.ops  wam7_sim.urdf.xacro  wam7_sim_ik.launch  wam7_sim_ik.ops
src/lcsr_barrett/: wam_teleop.py
