<package>
  <name>lcsr_barrett</name>
  <version>0.8.0</version>
  <license>BSD</license>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <description>For running the Barrett WAM with Conman</description>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>barrett_model</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>conman</plugin_depend>
      <plugin_depend>conman_ros</plugin_depend>
      <plugin_depend>conman_blocks</plugin_depend>
    </rtt_ros>
  </export>
</package>
